--- a/notebooks/origin_visualization.ipynb
+++ b/notebooks/origin_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Topic Distribution by Origin of Movies</h1>\n",
+    "<h1 align='center'>Topic Distribution by Origin of Movies</h1>\n",
     "\n",
     "In previous analyses, we studied the topic distribution by origin for popular movies, and we could see some interesting differences in topics. But, due to the limited movies plots for popular movies, interpretation of the results should be limited. So, we are trying to expand the topic distribution by origin for all movies across the world since 2007.\n",
     "<hr>"
@@ -298,161 +298,6 @@
    "metadata": {},
    "source": [
     "We create a data frame of all movies since 2007 and add the countries of origin fram the IMDB data set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mr/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/Users/mr/anaconda/lib/python2.7/site-packages/pandas/core/indexing.py:420: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "480000\n",
-      "490000\n",
-      "500000\n",
-      "510000\n",
-      "520000\n",
-      "530000\n",
-      "540000\n",
-      "550000\n",
-      "560000\n",
-      "570000\n",
-      "580000\n",
-      "590000\n",
-      "600000\n",
-      "610000\n",
-      "620000\n",
-      "630000\n",
-      "640000\n",
-      "650000\n",
-      "660000\n",
-      "670000\n",
-      "680000\n",
-      "690000\n",
-      "700000\n",
-      "710000\n",
-      "720000\n",
-      "730000\n",
-      "740000\n",
-      "750000\n",
-      "760000\n",
-      "770000\n",
-      "780000\n",
-      "790000\n",
-      "800000\n",
-      "810000\n",
-      "820000\n",
-      "830000\n",
-      "840000\n",
-      "850000\n",
-      "860000\n",
-      "870000\n",
-      "880000\n",
-      "890000\n",
-      "900000\n",
-      "910000\n",
-      "920000\n",
-      "930000\n",
-      "940000\n",
-      "950000\n",
-      "960000\n",
-      "970000\n",
-      "980000\n",
-      "990000\n",
-      "1000000\n",
-      "1010000\n",
-      "1020000\n",
-      "1030000\n",
-      "1040000\n",
-      "1050000\n",
-      "1060000\n",
-      "1070000\n",
-      "1080000\n",
-      "1090000\n",
-      "1100000\n",
-      "1110000\n",
-      "1120000\n",
-      "1130000\n",
-      "1140000\n",
-      "1150000\n",
-      "1160000\n",
-      "1170000\n",
-      "1180000\n",
-      "1190000\n",
-      "1200000\n",
-      "1210000\n",
-      "1220000\n",
-      "1230000\n",
-      "1240000\n",
-      "1250000\n",
-      "1260000\n",
-      "1270000\n",
-      "1280000\n",
-      "1290000\n",
-      "1300000\n",
-      "1310000\n",
-      "1320000\n",
-      "1330000\n",
-      "1340000\n",
-      "1350000\n",
-      "1360000\n",
-      "1370000\n",
-      "1380000\n",
-      "1390000\n",
-      "1400000\n",
-      "1410000\n",
-      "1420000\n",
-      "1430000\n",
-      "1440000\n",
-      "1450000\n",
-      "1460000\n",
-      "1470000\n",
-      "1480000\n",
-      "1490000"
-     ]
-    }
-   ],
-   "source": [
-    "'''imdb_meta_2007_2015 = imdb_meta_df[imdb_meta_df.year > 2006]\n",
-    "\n",
-    "with open(dropbox + \"imdb/countries.list\") as f:\n",
-    "    countries = f.readlines()\n",
-    "    \n",
-    "imdb_meta_2007_2015['origin'] = pd.Series(index=imdb_meta_2007_2015.index)\n",
-    "for i,movie in enumerate(countries):\n",
-    "    if movie[0] == '\"':\n",
-    "        continue\n",
-    "    if i%10000 == 0:\n",
-    "        print i\n",
-    "    split = movie.split('\\t')\n",
-    "    title = split[0]\n",
-    "    idx = imdb_meta_2007_2015[imdb_meta_2007_2015['title']== title].index\n",
-    "    #if the title is in our dataframe add the country\n",
-    "    if len(idx > 0):\n",
-    "        imdb_meta_2007_2015.loc[[idx[0]],['origin']]= split[len(split)-1].replace('\\n','')\n",
-    "imdb_meta_2007_2015.to_csv(dropbox + 'imdb_meta_2007_2015.csv')\n",
-    "'''"
    ]
   },
   {
@@ -1086,19 +931,6 @@
     "n_movies = [x for x in n_movies if x != 0]\n",
     "from itertools import repeat\n",
     "total_movies=[x for item in n_movies for x in repeat(item, 30)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#topic_score_sum = topic_score_sum.reset_index()\n",
-    "#topic_score_mean = topic_score_mean.reset_index()\n",
-    "#WHY?"
    ]
   },
   {
