--- a/notebooks/popularity_visualization.ipynb
+++ b/notebooks/popularity_visualization.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Topic Distribution of Popular Movies "
+    "<h1 align='center'>Topic Distribution of Popular Movies </h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll prepare the data for visualization of popular topic distributions across some countries. We collected titles of top movies in 6 countries(United States, Germany, United Kingdom, Russia, South Korea, and Mexico) and topic distribution for each movie was filtered from lda results on imdb data."
+    "Here, we'll prepare the data for visualization of popular topic distributions across some countries. We collected titles of top movies in 6 countries (United States, Germany, United Kingdom, Russia, South Korea, and Mexico) and topic distribution for each movie was filtered from lda results on imdb data."
    ]
   },
   {
@@ -3641,178 +3641,6 @@
    "source": [
     "#to confirm the number in column(1~29) means total number of movies in that origin\n",
     "imdb_top_origin_df[imdb_top_origin_df.origin =='Afghanistan']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "      <th>Unnamed: 0_x</th>\n",
-       "      <th>title</th>\n",
-       "      <th>year_x</th>\n",
-       "      <th>country</th>\n",
-       "      <th>Unnamed: 0_y</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>year_y</th>\n",
-       "      <th>origin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1713</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>227792</td>\n",
-       "      <td>The Take (2004)</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>227792</td>\n",
-       "      <td>227792</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>Argentina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6167</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.176534</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.083381</td>\n",
-       "      <td>0</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>On the Road (2012)</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Argentina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6168</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.176534</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.083381</td>\n",
-       "      <td>0</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>On the Road (2012)</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Argentina</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6169</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.176534</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.083381</td>\n",
-       "      <td>0</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>On the Road (2012)</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>148741</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Argentina</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4 rows × 38 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0   1   2   3   4   5         6   7   8   9    ...            28  29  \\\n",
-       "1713 NaN NaN NaN NaN NaN NaN       NaN NaN NaN NaN    ...           NaN NaN   \n",
-       "6167   0   0   0   0   0   0  0.176534   0   0   0    ...      0.083381   0   \n",
-       "6168   0   0   0   0   0   0  0.176534   0   0   0    ...      0.083381   0   \n",
-       "6169   0   0   0   0   0   0  0.176534   0   0   0    ...      0.083381   0   \n",
-       "\n",
-       "      Unnamed: 0_x               title  year_x         country  Unnamed: 0_y  \\\n",
-       "1713        227792     The Take (2004)    2004   United States        227792   \n",
-       "6167        148741  On the Road (2012)    2012         Germany        148741   \n",
-       "6168        148741  On the Road (2012)    2012   United States        148741   \n",
-       "6169        148741  On the Road (2012)    2012  United Kingdom        148741   \n",
-       "\n",
-       "      Unnamed: 0.1  year_y     origin  \n",
-       "1713        227792    2004  Argentina  \n",
-       "6167        148741    2012  Argentina  \n",
-       "6168        148741    2012  Argentina  \n",
-       "6169        148741    2012  Argentina  \n",
-       "\n",
-       "[4 rows x 38 columns]"
-      ]
-     },
-     "execution_count": 412,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#number in each column(0~29) is equal to total number of movies in that origin(excluding movies without plots)\n",
-    "imdb_top_origin_df[imdb_top_origin_df.origin =='Argentina']"
    ]
   },
   {
