--- a/notebooks/process_book.ipynb
+++ b/notebooks/process_book.ipynb
@@ -94,13 +94,18 @@
     "* [Topic Modeling with LSI and LDA](https://github.com/soorajmr/moviemeta/tree/master/notebooks/topic_modeling.ipynb) - Apply LSA and LDA on movie plot text corpus.\n",
     "\n",
     "\n",
-    "* [LDA Topic Distribution](https://github.com/soorajmr/moviemeta/tree/master/notebooks/topic_distribution.ipynb) - Analysis of topics found by LSA across countries and time.\n",
-    "\n",
-    "\n",
     "* [Vectorisation with doc2vec](https://github.com/soorajmr/moviemeta/tree/master/notebooks/doc2vec.ipynb) - Apply doc2vec algorithm on Wikipedia plots, visualize similatiry patterns.\n",
     "\n",
     "\n",
-    "* [Data Preparation for Tableau Public](https://github.com/soorajmr/moviemeta/tree/master/notebooks/popularity_visualization.ipynb) - Analyze the distribution of movie topics among popular movies across several countries.\n"
+    "* [LDA Topic Distribution](https://github.com/soorajmr/moviemeta/tree/master/notebooks/topic_distribution.ipynb) - Analysis of topics found by LSA across countries and time.\n",
+    "\n",
+    "\n",
+    "* [Data Preparation for Tableau Public](https://github.com/soorajmr/moviemeta/tree/master/notebooks/popularity_visualization.ipynb) - Analyze the distribution of movie topics among popular movies across several countries.\n",
+    "\n",
+    "\n",
+    "* [Data Preparation for Tableau Public 2](https://github.com/soorajmr/moviemeta/tree/master/notebooks/origin_visualization.ipynb) - Analyze the distribution of movie topics across countries of origin\n",
+    "\n",
+    "\n"
    ]
   },
   {
