--- a/notebooks/process_book.ipynb
+++ b/notebooks/process_book.ipynb
@@ -109,13 +109,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Final Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [Final Analysis](https://github.com/soorajmr/moviemeta/tree/master/notebooks/final_analysis.ipynb) "
+   ]
   }
  ],
  "metadata": {
